src/tests/snapshots/gitu__tests__pull__pull_menu_existing_push_remote_and_upstream.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Pull                     Arguments                                             |
 p     from origin        -r Rebase local commits (--rebase)                    |
 u     from origin/main                                                         |
 e     from elsewhere                                                           |
 q/esc Quit/Close                                                               |
styles_hash: 37e09624ad82fc96
