src/tests/snapshots/gitu__tests__pull__pull_menu_no_remote_or_upstream_set.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Pull                             Arguments                                     |
 p     pushRemote, setting that   -r Rebase local commits (--rebase)            |
 u     upstream, setting that                                                   |
 e     from elsewhere                                                           |
 q/esc Quit/Close                                                               |
styles_hash: 20d3803c48978461
