src/tests/snapshots/gitu__tests__pull__pull_push_remote.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull origin refs/heads/main                                               |
From file://                                                                     
 * branch            main       -> FETCH_HEAD                                   |
Already up to date.                                                             |
styles_hash: 4be76160a4018555
