src/tests/snapshots/gitu__tests__pull__pull_push_remote_prompt.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set pushRemote then pull: › █                                                 |
styles_hash: dc1e0f95bfad6afc
