src/tests/snapshots/gitu__tests__pull__pull_setup_upstream.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌new-branch                                                                     |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Pull                             Arguments                                     |
 p     pushRemote, setting that   -r Rebase local commits (--rebase)            |
 u     from main                                                                |
 e     from elsewhere                                                           |
 q/esc Quit/Close                                                               |
styles_hash: 62943a3ee0f9655d
